<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Plot and Cast!</string>
    <string name="plot">Plot Graph</string>
    <string name="session_reconnection_attempt">Trying to reconnect…</string>
    <string name="ccl_version">CustomVersion</string>
    <string name="failed_to_connect">Failed to connect.</string>
    <string name="ok">Ok</string>
    <string name="error">Error!</string>
    <string name="error_sending">Can\'t send message to Chromecast.</string>
    <string name="media_route_menu_title">Select a Device</string>
    <string name="initial_value">Initial Value</string>
    <string name="final_value">Final Value</string>
    <string name="increment">Increment</string>
    <string name="js_function">Javascript Function of x (don\' forget return statement!)</string>
    <string name="example">Give me an Example :)</string>
    <string name="missing_values">You need to fill all fields!</string>

</resources>
